# schools-access

./: .env  .gitignore  README.md  Snakefile  environment.yaml  pyproject.toml
config/: countries_list.txt
config/osm_specs/: roads.txt  schools.conf.ini  schools.txt
config/travel_speeds/: scenario_multimodal.csv  scenario_walkingonly+25.csv  scenario_walkingonly-25.csv  scenario_walkingonly.csv
rules/calc_hotspots/: classify.smk  hexgrid.smk
rules/comp_models/: compare_cdfs.py  compute_metrics.py  plot_compare.py  supmat.smk
rules/download_data/: boundaries.smk  copernicus_lulc.smk  dem_lulc.smk  merit_dem.smk  openstreetmap.smk  pop_ghs.smk  pop_wp.smk  rwi.smk  schools_giga.smk  schools_jrc.smk  schools_merged.smk  socio_econ.smk  urbanisation.smk
rules/make_figures/: maps.smk  plots.smk  tables.smk  zenodo.smk
rules/run_model1km/: calc_access.R  monergirona.smk  workflow.smk
rules/run_model90m/: analyse.smk  prepare.smk  process.smk
src/schools/: __init__.py
validation/ipynb/: compare_cdfs.py  lsms__ETH.ipynb  lsms__MWI.ipynb  lsms__NGA.ipynb  lsms__TZA.ipynb  lsms__UGA.ipynb  quantify_diff.ipynb
validation/model_comp/: cdf_metrics__ALL.csv  cdf_metrics__ALL.xlsx  cdf_metrics__ETH.csv  cdf_metrics__MWI.csv  cdf_metrics__NGA.csv  cdf_metrics__TZA.csv  cdf_metrics__UGA.csv
validation/survey_data/UGA/UGA_2019_UNPS_v03_M_CSV/: gsec4.csv
